--- a/matchmaker/mm_template/Cargo.toml
+++ b/matchmaker/mm_template/Cargo.toml
@@ -19,4 +19,11 @@ ABCI = ["anoma/ABCI"]
 [dependencies]
 anoma = {path = "../../shared", default-features = false}
 anoma_macros = {path = "../../macros"}
+borsh = "0.9.0"
+sha2 = "0.10.1"
+good_lp = {version = "*", features = ["minilp"], default-features = false}
+petgraph = {version = "0.5.1", features = ["serde-1"]}
+rust_decimal = {version = "1.14.3"}
+serde = {version = "1.0.125"}
+serde_json = {version = "1.0.64"}
 tokio = {version = "1.15.0", features = ["sync"]}
