--- a/matchmaker/mm_template/Cargo.toml
+++ b/matchmaker/mm_template/Cargo.toml
@@ -21,6 +21,7 @@ anoma = {path = "../../shared", default-features = false}
 anoma_macros = {path = "../../macros"}
 borsh = "0.9.0"
 sha2 = "0.10.1"
+base64 = "0.13.0"
 good_lp = {version = "*", features = ["minilp"], default-features = false}
 petgraph = {version = "0.5.1", features = ["serde-1"]}
 rust_decimal = {version = "1.14.3"}
